Added dynamic filter component

--- a/src/RocketGrid/HeaderCell.css
+++ b/src/RocketGrid/HeaderCell.css
@@ -1,5 +1,5 @@
 .header-cell {
-    border-bottom: 1px solid #1c46aa;
+    border-bottom: 1px solid #cacaca;
     color: black;
     font-weight: 400;
 }
@@ -15,4 +15,5 @@
 .header-cell i {
     margin-left: 12px;
     color: #2764f5;
+    font-size: 15px;
 }
