--- a/src/RocketGrid/RocketGrid.css
+++ b/src/RocketGrid/RocketGrid.css
@@ -44,7 +44,7 @@ section {
     display: block;
     float: right;
     /* margin: 20px; */
-    left: -81px;
+    left: -82px;
     top: -21px;
 }
 
@@ -57,4 +57,13 @@ section {
     width: 70px;
     display: block;
     position: absolute;
+}
+
+/*Toast*/
+.Toastify__toast-body {
+    font-size: 13px;
+}
+
+.Toastify__progress-bar.Toastify__progress-bar--dark.toast-progress {
+    background: #1c46aa;
 }
