Common storage handling , filter improvement

--- a/src/components/RocketGrid/RocketGrid.css
+++ b/src/components/RocketGrid/RocketGrid.css
@@ -38,3 +38,7 @@
 .Toastify__progress-bar.Toastify__progress-bar--dark.toast-progress {
     background: #1c46aa;
 }
+
+.grid-text {
+    padding: 25px;
+}
